<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2016 ELAN e.V.
  ~ All rights reserved. This program and the accompanying materials
  ~ are made available under the terms of the GNU Public License v3.0
  ~ which accompanies this distribution, and is available at
  ~ http://www.gnu.org/licenses/gpl.html
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/keyline_1"
        >

        <TextView
            android:id="@+id/course_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_area_space"
            android:ellipsize="end"
            android:maxLines="2"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold"
            tools:text="@string/lipsum_short"
            />

        <TextView
            android:id="@+id/course_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_area_space"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            tools:text="@string/lipsum_short"
            />


        <include layout="@layout/layout_icon_two_text" />

        <TextView
            android:id="@+id/appointment_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_area_space"
            android:text="@string/next_appointments"
            android:textAllCaps="true"
            android:textColor="@android:color/primary_text_light"
            android:fontFamily="sans-serif-light"
            />

        <TextView
            android:id="@+id/course_next_appointment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_area_space"
            android:layout_below="@id/appointment_title"
            android:text="@string/no_news"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/text_size_medium"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_area_space"
            android:text="@string/latest_news"
            android:textAllCaps="true"
            android:textColor="@android:color/primary_text_light"
            android:fontFamily="sans-serif-light"
            />


        <TextView
            android:id="@+id/news_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_area_space"
            android:text="@string/no_news"
            android:textColor="@color/primary_text_light"
            android:textSize="@dimen/text_size_medium"
            />

        <TextView
            android:id="@+id/news_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/layout_margin_normal"
            android:layout_marginTop="@dimen/layout_margin_normal"
            android:textColor="@color/secondary_text_light"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/show_news_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="@dimen/layout_margin_normal"
            android:layout_marginTop="@dimen/layout_margin_normal"
            android:text="@string/show_more"
            android:textAllCaps="true"
            android:textColor="@color/studip_mobile_dark"
            android:visibility="gone"
            />

        <TextView
            android:id="@+id/news_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.25"
            android:textColor="@android:color/primary_text_light"
            android:textColorLink="@color/studip_mobile_dark"
            android:layout_marginBottom="@dimen/layout_margin_normal"
            android:layout_marginTop="@dimen/layout_margin_normal"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_medium"
            android:visibility="gone"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/content_area_space"
            android:text="@string/Details"
            android:textAllCaps="true"
            android:textColor="@android:color/primary_text_light"
            android:fontFamily="sans-serif-light"
            />

        <TextView
            android:id="@+id/course_description"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/content_area_space"
            android:layout_weight="1"
            android:lineSpacingMultiplier="1.25"
            android:text="@string/no_details"
            android:textColorLink="@color/studip_mobile_dark"
            android:textIsSelectable="true"
            android:textSize="@dimen/text_size_medium"
            />
    </LinearLayout>

</ScrollView>