<?xml version="1.0" encoding="utf-8"?><!--
  Copyright (c) 2013 ELAN e.V.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<resources>
    <!-- General -->
    <string name="not_supported">Not supported</string>
    <string name="back">Back</string>
    <string name="last_updated">Last updated %1$s</string>

    <!-- Content descriptions -->
    <string name="studip_logo" translatable="false">StudIP Logo</string>
    <string name="email_icon" translatable="false">Email Icon</string>
    <string name="homepage_icon" translatable="false">Homepage Icon</string>
    <string name="user_image">User Image</string>
    <string name="file_icon">File Icon</string>
    <string name="message_unread_icon">message not read icon</string>
    <string name="phone_number_icon">Phone number icon</string>
    <string name="user_address_icon">User address icon</string>
    <string name="menu_item_icon">Menu item icon</string>
    <string name="icon" translatable="false">Icon</string>

    <string name="app_name">Stud.IP mobil</string>
    <string name="loading">loading</string>
    <string name="Activities">Activities</string>
    <string name="News">News</string>
    <string name="Courses">Courses</string>
    <string name="Events">Events</string>
    <string name="Messages">Messages</string>
    <string name="Contacts">Contacts</string>
    <string name="Documents">Files</string>
    <string name="Settings">Settings</string>
    <string name="General">General</string>
    <string name="menu">menu</string>
    <string name="Development">Development</string>
    <string name="Authorize">Authorize</string>
    <string name="choose_server">Choose server</string>
    <string name="no_data">No Data</string>
    <string name="Overview">Overview</string>
    <string name="Global">Global</string>
    <string name="just_now">just now</string>
    <string name="a_minute_ago">a minute ago</string>
    <string name="minutes_ago">%d minutes ago</string>
    <string name="an_hour_ago">an hour ago</string>
    <string name="hours_ago">%d hours ago</string>
    <string name="yesterday">yesterday</string>
    <string name="days_ago">%d days ago</string>
    <string name="by">by</string>
    <string name="internal_error">Internal Error</string>
    <string name="wrong_parameter">Wrong parameter</string>
    <string name="receiver_not_found">Unknown receiver</string>
    <string name="unknown_error">Unknwon error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="Favorites">Favorites</string>
    <string name="Groups">Groups</string>
    <string name="All">All</string>
    <string name="sorry">Sorry!</string>
    <string name="no_groups">You haven\'t created any groups!</string>
    <string name="no_contacts">You have no contacts!</string>
    <string name="no_favorites">You haven\'t selected any favorites!</string>
    <string name="no_users">No users available.</string>
    <string name="studip_app_contacts_favorites">StudipApp Favorites</string>
    <string name="Add_to_favorites">Add to favorites</string>
    <string name="Remove_from_favorites">Remove from favorites</string>
    <string name="Add_to_contacts">Add to contacts</string>
    <string name="Remove_from_contacts">Remove from contacts</string>
    <string name="manage_groups">Manage groups</string>
    <string name="user">User</string>
    <string name="personal_info">Personal info</string>
    <string name="contact_info">Contact info</string>
    <string name="crash_toast_string">Something went wrong. Sending crash report.</string>
    <string name="open_drawer">Open Navigation</string>
    <string name="close_drawer">Close Navigation</string>

    <!-- Courses List -->
    <string name="course_without_duration_limit">Courses without duration limit</string>

    <!-- CourseView Activity -->
    <string name="upcoming_events">Upcoming events</string>
    <string name="appointments">Appointments</string>
    <string name="attendees">Participants</string>
    <string name="time_room">Time / Room</string>
    <string name="Teacher">Teacher</string>
    <string name="next_appointments">Next appointments</string>
    <string name="Tutor">Tutor</string>
    <string name="Student">Student</string>
    <string name="no_appointments">No appointments</string>
    <string name="no_courses">You\'re not taking part in any courses.</string>
    <string name="no_attendees">No one is taking part in this course.</string>
    <string name="no_documents">Nothing uploaded yet.</string>
    <string name="no_news">No announcements available.</string>
    <string name="no_details">No details available.</string>
    <string name="Schedule">Schedule</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="Details">Details</string>
    <string name="latest_news">Latest news</string>
    <string name="and_more_teachers">With %1$d teachers more</string>

    <!-- Course Downloads -->
    <string name="download_completed">Download complete</string>
    <string name="error_cannot_resume">ERROR_CANNOT_RESUME</string>
    <string name="error_device_not_found">ERROR_DEVICE_NOT_FOUND</string>
    <string name="error_file_already_exists">ERROR_FILE_ALREADY_EXISTS</string>
    <string name="error_file_error">ERROR_FILE_ERROR</string>
    <string name="error_http_data_error">ERROR_HTTP_DATA_ERROR</string>
    <string name="error_insufficient_space">ERROR_INSUFFICIENT_SPACE</string>
    <string name="error_to_many_redirects">ERROR_TOO_MANY_REDIRECTS</string>
    <string name="error_unhandled_error_code">ERROR_UNHANDLED_HTTP_CODE</string>
    <string name="version_not_supported_message">
        Unfortunately your Android version is currently not supporting downloads from Stud.IP.
    </string>
    <string name="downloads">%1$d downloads</string>

    <!-- About app Activity -->
    <string name="version_and_copyright" translatable="false">Version: %1$s
        (%2$s) \n &#169; 2014 ELAN e.V. Oldenburg</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="licenses">Licenses</string>
    <string name="about_studip_mobile">About Stud.IP mobil</string>
    <string name="about_text">Stud.IP mobil for Android allows you to easily access your
        universities Stud.IP without opening the browser. The app offers you an optimized
        experience for your android device.
    </string>
    <string name="homepage_text"><a href="http://mlearning.elan-ev.de/">visit our website</a></string>
    <string name="legal_notice">Legal notice</string>
    <string name="faq">Frequently asked questions</string>

    <!-- SignIn Activity -->
    <string name="syncing_semesters">Synchronizing semesters</string>
    <string name="syncing_courses">Synchronizing courses</string>
    <string name="syncing_news">Synchronizing news</string>
    <string name="syncing_contacts">Synchronizing contacts</string>
    <string name="syncing_messages">Synchronizing messages</string>
    <string name="syncing_users">Synchronizing userdata</string>
    <string name="syncing_institutes">Synchronizing institutes</string>
    <string name="no_servers">No servers available</string>
    <string name="sync_notice">
        Depending on your internet connection and Stud.IP
        utilization this process may take several minutes to complete.
    </string>
    <string name="authentication">Authentication</string>
    <string name="missing_studip_message">
        <![CDATA[<u>Your Stud.IP is missing? <br />Learn more about it here.</u>]]>
    </string>
    <string name="sync_network_error">
        Something went wrong while syncing your data. Please try again later.
    </string>

    <!-- UserList Fragment -->
    <string name="successfully_deleted">Successfully deleted</string>
    <string name="successfully_added">Successfully added</string>

    <!-- Messages -->
    <string name="Inbox">Inbox</string>
    <string name="Outbox">Outbox</string>
    <string name="Compose">Compose</string>
    <string name="Menu">Menu</string>
    <string name="mark_as_read">Mark message as read</string>
    <string name="read">read</string>
    <string name="delete_message">Delete this message</string>
    <string name="delete">delete</string>
    <string name="forward_message">Forward this message</string>
    <string name="forward">forward</string>
    <string name="reply_message">Reply to message</string>
    <string name="reply">reply</string>
    <string name="message_marked_read">Marked message as read</string>
    <string name="message_deleted">Message deleted</string>
    <string name="Receiver">Receiver</string>
    <string name="Subject">Subject</string>
    <string name="original_message">Original message</string>
    <string name="message_forward_string">FWD</string>
    <string name="message_reply_string">RE</string>
    <string name="Send">send</string>
    <string name="compose_message">Compose new message</string>
    <string name="message_sent">Message sent</string>
    <string name="no_messages">You don\'t have any messages!</string>
    <string name="Send_message">Send message</string>
    <string name="Message">Message</string>
    <string name="please_choose_receiver">Please choose a receiver</string>
    <string name="please_enter_subject">Please enter a message subject</string>
    <string name="please_enter_message">Please enter a message</string>
    <string name="enter_forename_lastname">Enter Forename Lastname</string>
    <string name="enter_subject">Enter subject</string>
    <string name="enter_message">Enter message</string>

    <!-- Main OptionsMenu -->
    <string name="About">About</string>
    <string name="Logout">Logout</string>
    <string name="Feedback">Feedback</string>

    <!-- Planner -->
    <string name="Planner">Planner</string>
    <string name="no_schedule">
        You have no schedule for the next two weeks.
    </string>

    <!-- Institutes -->
    <string name="Institutes">Institutes</string>

    <!-- Feedback -->
    <string name="faq_alert_dialog_title">Show FAQ first?</string>
    <string name="faq_alert_dialog_message">We set up a list with
        frequently asked questions. Do you want to see it first?</string>
    <string name="faq_alert_dialog_negativ_button">No, send feedback.</string>

</resources>