<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (c) 2013 ELAN e.V.
  All rights reserved. This program and the accompanying materials
  are made available under the terms of the GNU Public License v3.0
  which accompanies this distribution, and is available at
  http://www.gnu.org/licenses/gpl.html
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@android:color/background_light" >

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_toLeftOf="@+id/fullname"
        android:contentDescription="@string/user_image" />

    <TextView
        android:id="@+id/fullname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:drawableLeft="@drawable/institute"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textIsSelectable="true" />

</RelativeLayout>